frameworkのクラス名を変更

--- a/Lazieal.vcxproj
+++ b/Lazieal.vcxproj
@@ -11,11 +11,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Lazieal.cpp" />
+    <ClCompile Include="LaziealFramework.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Lazieal.h" />
+    <ClInclude Include="LaziealFramework.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
