--- a/Lazieal.vcxproj
+++ b/Lazieal.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="LaziealFramework.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
@@ -21,6 +22,7 @@
   <ItemGroup>
     <ClInclude Include="AbstractSceneFactory.h" />
     <ClInclude Include="BaseScene.h" />
+    <ClInclude Include="GameApp.h" />
     <ClInclude Include="LaziealFramework.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="SceneFactory.h" />
