画面クリアまで完了

--- a/Lazieal.vcxproj
+++ b/Lazieal.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="D3DResourceLeakChecker.cpp" />
+    <ClCompile Include="DirectXCommon.cpp" />
     <ClCompile Include="GameApp.cpp" />
     <ClCompile Include="LaziealFramework.cpp" />
     <ClCompile Include="Logger.cpp" />
@@ -25,6 +26,7 @@
     <ClInclude Include="AbstractSceneFactory.h" />
     <ClInclude Include="BaseScene.h" />
     <ClInclude Include="D3DResourceLeakChecker.h" />
+    <ClInclude Include="DirectXCommon.h" />
     <ClInclude Include="GameApp.h" />
     <ClInclude Include="LaziealFramework.h" />
     <ClInclude Include="Logger.h" />
