--- a/Lazieal.vcxproj
+++ b/Lazieal.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="SceneFactory.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="SrvManager.cpp" />
     <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="WinAPI.cpp" />
   </ItemGroup>
@@ -32,6 +33,7 @@
     <ClInclude Include="Logger.h" />
     <ClInclude Include="SceneFactory.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="SrvManager.h" />
     <ClInclude Include="TitleScene.h" />
     <ClInclude Include="WinAPI.h" />
   </ItemGroup>
