ソリューション内のフィルタを変更

--- a/Lazieal.vcxproj.filters
+++ b/Lazieal.vcxproj.filters
@@ -21,7 +21,19 @@
       <Filter>Game\GameApp</Filter>
     </ClCompile>
     <ClCompile Include="D3DResourceLeakChecker.cpp">
-      <Filter>Engine\Base\ResourceLeakChecker</Filter>
+      <Filter>Engine\Base\DirectX\ResourceLeakChecker</Filter>
+    </ClCompile>
+    <ClCompile Include="DirectXCommon.cpp">
+      <Filter>Engine\Base\DirectX\Common</Filter>
+    </ClCompile>
+    <ClCompile Include="SrvManager.cpp">
+      <Filter>Engine\Base\SrvManager</Filter>
+    </ClCompile>
+    <ClCompile Include="WinAPI.cpp">
+      <Filter>Engine\Base\WinAPI</Filter>
+    </ClCompile>
+    <ClCompile Include="TextureManager.cpp">
+      <Filter>Engine\Base\TextureManager</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -55,9 +67,6 @@
     <Filter Include="Engine\Base\Logger">
       <UniqueIdentifier>{cacbf317-6f71-4c27-a334-cb84a7e9636f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Base\AbstractSceneFactory">
-      <UniqueIdentifier>{3cb2877c-66cd-4450-898d-7ab371bac2b5}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Game\Scene\SceneFactory">
       <UniqueIdentifier>{019f258c-ed74-4bbf-bd19-d39247c5acb4}</UniqueIdentifier>
     </Filter>
@@ -67,8 +76,26 @@
     <Filter Include="Game\GameApp">
       <UniqueIdentifier>{1e8b72a1-f4e5-4db3-bdc7-5840a27a271b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Engine\Base\ResourceLeakChecker">
+    <Filter Include="Engine\Base\DirectX">
+      <UniqueIdentifier>{6e11f8d8-d7a1-4f76-9773-95e32418390b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Base\DirectX\Common">
+      <UniqueIdentifier>{61dfce0a-993e-4119-9c78-91d6df2296af}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Base\DirectX\ResourceLeakChecker">
       <UniqueIdentifier>{64e22ff4-980d-4481-98a2-f5d6521b92fe}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Base\SrvManager">
+      <UniqueIdentifier>{3e4cd450-b90a-4c38-ba72-fadc05e26ee8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Base\WinAPI">
+      <UniqueIdentifier>{d49fd5b6-8dce-4f04-94fd-2784872e22d9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Base\TextureManager">
+      <UniqueIdentifier>{7e58bf52-09f1-412a-b64d-c077abe94bba}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Lazieal\AbstractSceneFactory">
+      <UniqueIdentifier>{3cb2877c-66cd-4450-898d-7ab371bac2b5}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -85,7 +112,7 @@
       <Filter>Game\Scene\GameScene\TitleScene</Filter>
     </ClInclude>
     <ClInclude Include="AbstractSceneFactory.h">
-      <Filter>Engine\Base\AbstractSceneFactory</Filter>
+      <Filter>Engine\Lazieal\AbstractSceneFactory</Filter>
     </ClInclude>
     <ClInclude Include="SceneFactory.h">
       <Filter>Game\Scene\SceneFactory</Filter>
@@ -97,7 +124,19 @@
       <Filter>Game\GameApp</Filter>
     </ClInclude>
     <ClInclude Include="D3DResourceLeakChecker.h">
-      <Filter>Engine\Base\ResourceLeakChecker</Filter>
+      <Filter>Engine\Base\DirectX\ResourceLeakChecker</Filter>
+    </ClInclude>
+    <ClInclude Include="DirectXCommon.h">
+      <Filter>Engine\Base\DirectX\Common</Filter>
+    </ClInclude>
+    <ClInclude Include="SrvManager.h">
+      <Filter>Engine\Base\SrvManager</Filter>
+    </ClInclude>
+    <ClInclude Include="WinAPI.h">
+      <Filter>Engine\Base\WinAPI</Filter>
+    </ClInclude>
+    <ClInclude Include="TextureManager.h">
+      <Filter>Engine\Base\TextureManager</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
