--- a/Lazieal.vcxproj
+++ b/Lazieal.vcxproj
@@ -14,6 +14,7 @@
     <ClCompile Include="D3DResourceLeakChecker.cpp" />
     <ClCompile Include="DirectXCommon.cpp" />
     <ClCompile Include="GameApp.cpp" />
+    <ClCompile Include="ImGuiManager.cpp" />
     <ClCompile Include="Lazieal.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="main.cpp" />
@@ -30,6 +31,7 @@
     <ClInclude Include="D3DResourceLeakChecker.h" />
     <ClInclude Include="DirectXCommon.h" />
     <ClInclude Include="GameApp.h" />
+    <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="Lazieal.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="SceneFactory.h" />
@@ -42,6 +44,9 @@
   <ItemGroup>
     <ProjectReference Include="externals\DirectXTex\DirectXTex_Desktop_2022_Win10.vcxproj">
       <Project>{371b9fa9-4c90-4ac6-a123-aced756d6c77}</Project>
+    </ProjectReference>
+    <ProjectReference Include="externals\imgui\imgui.vcxproj">
+      <Project>{ea65cfc2-0d78-4570-b5bf-7cfddd9de79a}</Project>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
