--- a/imgui.ini
+++ b/imgui.ini
@@ -3,6 +3,11 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=741,46
+Pos=547,41
 Size=550,618
+Collapsed=1
+
+[Window][DebugCamera]
+Pos=87,64
+Size=400,80
 
