objectのデバッグがしやすくなるImGui関連の関数を追加

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,9 +5,12 @@ Size=400,400
 [Window][Dear ImGui Demo]
 Pos=547,41
 Size=550,618
-Collapsed=1
 
 [Window][DebugCamera]
-Pos=567,54
+Pos=41,314
 Size=400,80
+
+[Window][teapot]
+Pos=60,60
+Size=364,220
 
