multimaterialをImGuiで堪能することに成功

--- a/imgui.ini
+++ b/imgui.ini
@@ -11,6 +11,10 @@ Pos=41,314
 Size=400,80
 
 [Window][teapot]
+Pos=109,79
+Size=324,350
+
+[Window][multiMaterial]
 Pos=60,60
-Size=364,220
+Size=382,442
 
